Fixed broken images on mobile

--- a/src/cases/style.scss
+++ b/src/cases/style.scss
@@ -78,7 +78,7 @@
   &__top {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    align-items: flex-start;
     
     img {
       width: 100%;
